# wasm_load_tfjs_test

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE.bazel  compile_flags.txt  package.json  rollup.config.js  tsconfig.json
cc/: BUILD.bazel  index.d.ts  index.js  load_with_proxy.js.lds  main.cc  main.d.ts  package.json  thread_utils.h
web/: BUILD.bazel  http_sync.ts  index.html  index.ts  worker.ts
web/double_model/: BUILD.bazel  model.json
web/model/: model.js
