load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")


package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cc_srcs",
    srcs = glob(["*.cc"]),
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
        "thread_utils.h",
    ],
    deps = [
        # using .lds extension because cc_library does not allow .js
        "load_with_proxy.js.lds",
    ],
    copts = [
        "-g3",
        "-gsource-map",
        "-pthread",
    ],
    linkopts = [
        #"-s MODULARIZE=1",
        #"-s EXPORT_NAME='MainWasm'", # This option breaks pthreads by renaming 'Module' to whatever is set here, but main.worker.js always assumes it's 'Module'.
        # _emscripten_proxy_finish is needed for notifying emscripten when an
        # async pthread proxy is done.
        "-s EXPORTED_FUNCTIONS=_emscripten_proxy_finish,_main",
        "-s USE_PTHREADS",
        "-pthread",
        #"-s PTHREAD_POOL_SIZE=2",
        "-s PTHREAD_POOL_SIZE_STRICT=0",
        "-s PROXY_TO_PTHREAD",
        # Load the javascript library that implements load_with_proxy.
        "--js-library $(location load_with_proxy.js.lds)",
        # Debug options
        "-g3",
        "-gsource-map",
   ],
)

wasm_cc_binary(
    name = "main_wasm",
    cc_target = ":main",
)

